# ml-travel-insurance

./: README.md  main.py  model_training.py  pyproject.toml  requirements.txt  setup.cfg  todo.txt
interactive/: eda.ipynb  output.csv
models/: 20220828104916_lgbmc_base.txt
src/: data_modelling.py  inference_pipeline.py  model_inference.py  model_training.py  training_pipeline.py
src/modules/: data_reader.py  data_wrangler.py  feature_transformer.py  product_map.py
src/tests/: test_data_wrangler.py  test_feature_transformer.py  test_one_hot_encoder.py
