[metadata]
name = lgbm_classifier_workwthrough
description = working example of lgbm modelling
author = Jonathan.T
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    modules
install_requires =
    pandas==1.4.3
    pandas-profiling==3.2.0
    scikit-learn==1.1.2
    lightgbm==3.3.2
    pytest==7.1.2
    mypy==0.910
    flake8==3.9
    imblearn==0.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 160